package com.kindnesskattle.bddAtcProject.Entities;

import jakarta.persistence.*;
import lombok.Data;

@Entity
@Table(name = "city")
@Data
public class City {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    @Column(name = "city_id")
    private Long cityId;

//    @ManyToOne
//    @JoinColumn(name = "state_id", nullable = false)
//    private State state;

    @Column(name = "city_name", nullable = false)
    private String cityName;

}
